--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ar-drone": "git://github.com/andrew/node-ar-drone.git#gps",
     "node-vincenty": "0.0.6",
     "socket.io": "~0.9.16",
-    "express": "~3.4.0"
+    "express": "~3.4.0",
+    "dronestream": "~1.1.1"
   },
   "devDependencies": {},
   "scripts": {
